--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "author": "Vagner Bom Jesus",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.9",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "html-pdf": "^3.0.1",
     "http-errors": "^2.0.0",
     "nodemon": "^3.1.0"
   }
