--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.19.2",
     "html-pdf": "^3.0.1",
     "http-errors": "^2.0.0",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0"
   }
 }
