--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "Vagner Bom Jesus",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "html-pdf": "^3.0.1",
