--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "express": "^4.19.2",
     "html-pdf": "^3.0.1",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "uuid": "^9.0.1"
   }
 }
